--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ subjects:
 - !lcsh 'Anarchists'
 - !lcc 'HX'
 - !lcsh 'Anarchism -- History'
+- GITenberg
 title: 'The Place of Anarchism in Socialistic Evolution
 
   An Address Delivered in Paris'
